added js and css

--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -4,8 +4,34 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACME Events</title>
+    <link href="events.css" rel="stylesheet">
 </head>
 <body>
-    
+    <header id="header"><img src="images\menu.png" id="menu"><h1 id="main_head">ACME EVENTS</h1><img src="images\loggo.png"id="loggo"></header>
+    <aside>
+        <p>Admin Log in</p>
+        <label  for="username">User Name</label>
+        <input type="text" id="username"><br>
+        <label  for="password">Password</label>
+        <input type="password" id="password">
+    </aside>
+    <main><p>ACME EVENTS (slideshow/video)</p></main>
+   
+        <div class="event">
+        <img src="images\city-hall.jpg" alt="city hall stockholm" >
+        <div class="text_block">
+            <h1>Stockholm international <br>film festival</h1>
+        </div>
+        
+        <img src="images\food.jpg" alt="food" >
+        <div class="text_block">
+            <h1>Smaka Good <br>Food festival</h1>
+        </div>
+    </div>
+
+    <footer>
+
+    </footer>
+    <script src="main.js"></script>
 </body>
 </html>
