--- a/Webpage/pages/events.html
+++ b/Webpage/pages/events.html
@@ -4,8 +4,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Events</title>
+    <link href="events.css" rel="stylesheet">
 </head>
 <body>
+    <h1 id="event_page">Events</h1>
+    <div>
+        <div class="event_list">
+            <h3>Bryan Adams- Shine A Light</h3>
+            <img src="images\event_1_music_show.jpg" class="event_img">
+        </div>
+        <div class="event_list">
+            <h3>Stockholm International horse show</h3>
+            <img src="images\event_2_sports.jpg"class="event_img">
+        </div>
+        
+    </div>
     
 </body>
 </html>
