--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -16,7 +16,9 @@
         <input type="password" id="password">
     </aside>
     <main><p>ACME EVENTS (slideshow/video)</p></main>
-   
+    <video width="320" height="240" autoplay>
+        <source src="images/front_page.mp4" type="video/mp4">
+        </video>
         <div class="event">
         <img src="images\city-hall.jpg" alt="city hall stockholm" >
         <div class="text_block">
