--- a/Webpage/pages/events.html
+++ b/Webpage/pages/events.html
@@ -11,12 +11,29 @@
     <div>
         <div class="event_list">
             <h3>Bryan Adams- Shine A Light</h3>
-            <img src="images\event_1_music_show.jpg" class="event_img">
+            <img src="images\bryan_adams.jpg" class="event_img">
         </div>
         <div class="event_list">
             <h3>Stockholm International horse show</h3>
-            <img src="images\event_2_sports.jpg"class="event_img">
+            <img src="images\horse_show.jpg"class="event_img">
         </div>
+        <div class="event_list">
+            <h3>ISU World figure skating Championship</h3>
+            <img src="images\skating.jpg"class="event_img">
+        </div>
+        <div class="event_list">
+            <h3>Seven Worlds one planet (BBC Show)</h3>
+            <img src="images\bbc.jpg"class="event_img">
+        </div>
+        <div class="event_list">
+            <h3>Hans Zimmer Live Show</h3>
+            <img src="images\hans_zimmer.jpg"class="event_img">
+        </div>
+        <div class="event_list">
+            <h3>Sweden Portugal Nations League</h3>
+            <img src="images\football.jpg"class="event_img">
+        </div>
+
         
     </div>
     
