change main page

--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -13,9 +13,7 @@
         <input type="text" id="username" placeholder="Användarnamn"><br>
         <input type="password" id="password" placeholder="Lösenord">
     </aside>
-    <main><p>ACME EVENTS (slideshow/video)
-        
-    </p></main>
+    <p>ACME EVENTS (slideshow/video)</p>
     
         <div class="event">
         <img src="" alt="" >
