--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -9,7 +9,9 @@
 <body>
     <div class="topNavigation">
         <div class="menulist">Menu</div>
-        <div class="logo">Logo<img src="../images/logo_2.png"></div>
+        <div class="header">
+            <img class="logo" src="../images/logo_2.png">
+        </div>
     </div>
 
     <div class="eventHighlights">
