started styling contacts, mockup info and pages

--- a/Webpage/pages/contact.html
+++ b/Webpage/pages/contact.html
@@ -4,14 +4,45 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Contact us!</title>
+    <link rel="stylesheet" href="contact.css" />
   </head>
   <body>
     <div class="container">
-      <div class="contactPerson"></div>
-      <div class="contactPerson"></div>
-      <div class="contactPerson"></div>
-      <div class="contactPerson"></div>
-      <div class="contactPerson"></div>
+      <div class="contactPerson">
+        <img src="../../pictures/entrepreneur-593358_640.jpg" alt="picture of an awesome person" />
+        <div>
+          <h2>Developer</h2>
+          <span>Generic description</span>
+        </div>
+      </div>
+      <div class="contactPerson">
+        <img src="../../pictures/laptop-3087585_640.jpg" alt="picture of an awesome person" />
+        <div>
+          <h2>Boss</h2>
+          <span>Generic description</span>
+        </div>
+      </div>
+      <div class="contactPerson">
+        <img src="../../pictures/man-1209494_640.jpg" alt="picture of an awesome person" />
+        <div>
+          <h2>Designer</h2>
+          <span>Generic description</span>
+        </div>
+      </div>
+      <div class="contactPerson">
+        <img src="../../pictures/man-1351317_640.png" alt="picture of an awesome person" />
+        <div>
+          <h2>Sales</h2>
+          <span>Generic description</span>
+        </div>
+      </div>
+      <div class="contactPerson">
+        <img src="../../pictures/man-1351393_640.png" alt="picture of an awesome person" />
+        <div>
+          <h2>Receptionist</h2>
+          <span>Generic description</span>
+        </div>
+      </div>
     </div>
   </body>
 </html>
