added description to events in json file, slight alterations to pages and css

--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -13,14 +13,18 @@
     </div>
 
     <div class="eventHighlights">
-        <div class="itemHighlight">Main</div>
+        <div class="itemHighlight">Main
+            <img src="/images/food.jpg">
+            <img src="/images/horse_show.jpg">
+        </div>
         <div class="itemText">Text</div>
     </div>
 
     <div class="bottomNavigation">
-        <a href="contact.html">Kontakta oss!</a>
+        <a href="contact.html">Kontakt!</a>
         <a href="about.html">Om oss!</a>
     </div>
     
+    <script src="/scripts/highlights.js"></script>
 </body>
 </html>
