--- a/Webpage/pages/about.html
+++ b/Webpage/pages/about.html
@@ -7,9 +7,9 @@
     <title>About ACME Events</title>
 </head>
 <body>
-    <div>We at ACME belive in efficiency, by using Scrum we make our team effective and motivated!</div>
-    <div>One might ask, what in the world is Scrum?</div><br>
-    <div class="myDiv"><h1>Scrum:</h1>
+    <h1>We at ACME belive in efficiency, by using Scrum we make our team effective and motivated!</h1>
+    <h2>One might ask, what in the world is Scrum?</h2><br>
+    <div class="myDiv"><h3>Scrum:</h3>
         <p>Development can be crazy and a way to make it less so is by using scrum.<br>
         This is a way to increase group productivity by making a clear schedule.<br>
         We plan how to work with eachother, divide the project into small tasks and decide when we will work with what.<br>
