changes made to css,js and html

--- a/Webpage/pages/events.html
+++ b/Webpage/pages/events.html
@@ -15,7 +15,7 @@
             <img src="../images/conference_greenenergy.jpg" class="event_img">
         </div>
         <div class="event_list">
-            <h3>Advances in health Care</h3>
+            <h3>Conference on Advances in health Care</h3>
             <img src="../images/conference_health.jpg" class="event_img">
         </div>    
         <div class="event_list">
@@ -36,7 +36,7 @@
         </div>
         
         <div class="event_list">
-            <h3>Seven Worlds one planet (BBC Show)</h3>
+            <h3>Church Wedding</h3>
             <img src="../images/church_wedding.jpg"class="event_img">
         </div>
         <div class="event_list">
