--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/mainpage.css" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/15d187da22.js" crossorigin="anonymous"></script>
     <title>ACME Events</title>
 </head>
 <body>
@@ -28,9 +29,76 @@
         
         <div class="logo"><img src="../images/logo-v3.png"></div>
     </div>
+    <div class="container">
+    <div class="section-title"><h1>Featured Events</h1></div>
 
     <div class="eventHighlights">
-        <div class="itemHighlight">Main</div>
+        <div class="main-card">
+            <p class="category">Concert <span>10/12</span> </p>
+            <h2 class="title">Michael Jackson Live!</h2>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. 
+            </p>
+            <p class="place"> Madison Square Garden </p>
+            <i class="fas fa-bookmark"></i>
+
+        </div>
+        <div class="card">
+            <img src="../images/bbc.jpg" alt="">  
+            <p class="category">Exibition</p>
+            <h2 class="title">This is an Art Exibition</h2>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. 
+            </p>
+            <p class="date">20 de Agosto de 2021</p>
+            <i class="fas fa-bookmark"></i>
+        </div>
+        <div class="card">
+            <img src="../images/church_wedding.jpg" alt="">  
+            <p class="category">Wedding</p>
+            <h2 class="title">This is a Wedding</h2>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. 
+            </p>
+            <p class="date">17 de Outubro de 2023</p>
+            <i class="fas fa-bookmark"></i>
+        </div>
+        <div class="card">
+            <img src="../images/conference_health.jpg" alt="">  
+            <p class="category">Conference</p>
+            <h2 class="title">This is a Conference</h2>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. 
+            </p>
+            <p class="date">16 de Novembto de 2022</p>
+            <i class="fas fa-bookmark"></i>
+        </div>
+        <div class="card">
+            <img src="../images/people-concert3.jpeg" alt="">  
+            <p class="category">Concert</p>
+            <h2 class="title">This is a Concert</h2>
+            <p class="description">
+                Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
+                sed do eiusmod tempor incididunt ut labore et dolore magna 
+                aliqua. 
+            </p>
+            <p class="date">20 de Outubro de 2030</p>
+            <i class="fas fa-bookmark"></i>
+        </div>
+        
+
+    </div>
+</div>
         <div class="itemText">Text</div>
     </div>
 
