--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -122,6 +122,20 @@
         </div>
     </div>
     
+    <div class="section-title"><h2>Contact Us</h2></div>
+
+    <div class="contact-us">
+
+        <div class="google-maps-container">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m14!1m12!1m3!1d2226.0882971877613!2d18.021111546138222!3d59.345149003404366!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!5e0!3m2!1sen!2sse!4v1603443980982!5m2!1sen!2sse"  frameborder="0" style="border:0;" allowfullscreen="" aria-hidden="false" tabindex="0"></iframe>
+        </div>
+        <div class="contact-form">
+            <input type="text" placeholder="Name" id="input-name">
+            <input type="email" placeholder="Email" id="input-email">
+            <textarea class="textarea" name="textarea" id="input-textarea" cols="30" rows="10">Send your message here</textarea>
+            <button id="input-submit" type="submit">submit</button>
+        </div>
+    </div>
     <!-- <div class="browseEventsArea">
         <div class="section-title"><h2>Search for Events Here</h2></div>
         <p>Browse Your Events Here - Filter by date - Location - Category</p>
