new js or fetch,cahnges in events.js

--- a/Webpage/pages/events.html
+++ b/Webpage/pages/events.html
@@ -35,7 +35,7 @@
             <option value="" disabled selected hidden>SORT YOUR EVENT BY</option>
             <option value="date">Date</option>
             <option value="title">Title</option>
-            <option value="Category">Category</option>
+            <option value="Category">Id</option>
         </select>
     </div>
     <div id="main">
@@ -91,6 +91,7 @@
     <div class="bottomNavigation">
         <div class="footer">Footer</div>
     </div>
+    <script src="../scripts/fetch.js"></script>
     <script src="../scripts/events.js"></script>
 </body>
 </html>
