--- a/Webpage/pages/admin.html
+++ b/Webpage/pages/admin.html
@@ -34,7 +34,7 @@
     <!-- Sidebar -->
     
     Title:
-    <input type="text" id="title" placeholder="Title">
+    <input type="text" id="name" placeholder="Title">
     <br />
     Category:
     <!--<input type="text" id="category" placeholder="Category">-->
