updated footer with links and proper font-family

--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -128,7 +128,9 @@
     </div> -->
     
     <footer class="footer">
-        <p>Footer</p>
+        <a href="about.html">About us</a>
+        <a href="contact.html" class="contact">Contact</a>
+        <p>ACME Events</p>
     </footer>
     
 </body>
