added footer and links to each page, some modification still needed.

--- a/Webpage/pages/contact.html
+++ b/Webpage/pages/contact.html
@@ -64,5 +64,11 @@
         <img src="../../pictures/man-1351393_640.png" alt="picture of an awesome person" />
       </div>
     </div>
+
+    <div class="footer">
+      <a href="about.html" class="about">About us</a>
+      <a href="Mainpage.html" class="home">ACME Events</a>
+    </div>
+
   </body>
 </html>
