--- a/Webpage/pages/login.html
+++ b/Webpage/pages/login.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="../css/mainpage.css" rel="stylesheet">
-    <link href="../css/admin.css" rel="stylesheet">
+    <link href="../css/login.css" rel="stylesheet">
 
 </head>
 <body>
