--- a/Webpage/pages/events.html
+++ b/Webpage/pages/events.html
@@ -47,9 +47,22 @@
     </div>
     <div id="main">
    </div>
-    <div class="bottomNavigation">
-        <div class="footer">Footer</div>
+   <div class="bottomNavigation">
+    <div class="footer">ACME EVENTS</div>
+    <div class="info">
+    <p>+46 723759999</p>
+    <p>info@acmeevents.com</p>
+    <p>+46 723 751111</p></div>
+    <div class="social">
+        <i class="fab fa-facebook-f"></i>
+        <i class="fab fa-linkedin-in"></i>
+        <i class="fab fa-twitter"></i>
+        <i class="fab fa-pinterest"></i>
+        <i class="fab fa-instagram"></i>
     </div>
+    <div class="copyright">&#169 2020 ACME EVENTS | SITE BY RADS</div>
+
+</div>
     <script src="../scripts/fetch.js"></script>
     <script src="../scripts/events.js"></script>
 </body>
