--- a/Webpage/pages/contact.html
+++ b/Webpage/pages/contact.html
@@ -6,7 +6,7 @@
     <link href="../css/mainpage.css" rel="stylesheet" />
     <link rel="stylesheet" href="../css/contact.css" />
     <script src="https://kit.fontawesome.com/15d187da22.js" crossorigin="anonymous"></script>
-    <title>ACME Events</title>
+    <title>Contact - ACME Events</title>
   </head>
   <body>
     <div class="topNavigation">
@@ -39,7 +39,7 @@
             Powder cupcake I love sweet roll jelly lollipop candy canes macaroon gingerbread. Jujubes sesame snaps croissant cake marshmallow biscuit tart pie cake. Gummies I love chocolate cake
             chocolate bar. Lemon drops brownie muffin donut caramels ice cream jujubes I love. Chocolate bar halvah brownie powder wafer tootsie roll powder.
           </span>
-          <div class="contactInfo">developer@acmeevents.com | Phone(123) 456 0987</div>
+          <div class="contactInfo">developer@acmeevents.com | Phone: (123)-456-0987</div>
         </div>
         <img src="../../pictures/entrepreneur-593358_640.jpg" alt="picture of an awesome person" />
       </div>
