--- a/Webpage/pages/contact.html
+++ b/Webpage/pages/contact.html
@@ -30,7 +30,7 @@
     </div>
 
     <div class="container">
-      <div class="section-title"><h2>Contact us</h2></div>
+      <div class="section-title"><h2>Contact Us</h2></div>
       <div class="contactPerson">
         <div class="text">
           <h2>Developer</h2>
