--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="../css/mainpage.css" rel="stylesheet">
     <script src="https://kit.fontawesome.com/15d187da22.js" crossorigin="anonymous"></script>
+    <script src="../scripts/fetch.js"></script>
     <title>ACME Events</title>
 </head>
 <body>
