added delete link in sidebar

--- a/Webpage/pages/admin.html
+++ b/Webpage/pages/admin.html
@@ -35,7 +35,8 @@
     <div  class="container">
         <aside>
             <div class="aside_links"><i class="far fa-edit"></i><span id="admin_edit">Edit Events</span></div>
-            <div class="aside_links"><i class="far fa-newspaper"></i></i><span id="admin_create">Create New Events</span> </div>
+            <div class="aside_links"><i class="far fa-newspaper"></i><span id="admin_create">Create New Events</span></div>
+            <div class="aside_links"><i class="far fa-trash-alt"></i><span id="admin_delete">Delete Event</span></div>
             <div class="aside_links"><i class="fas fa-sign-out-alt"></i><span id="admin_logout">Log out</span></div>
         </aside>
        
