--- a/Webpage/pages/events.html
+++ b/Webpage/pages/events.html
@@ -60,7 +60,7 @@
         <i class="fab fa-pinterest"></i>
         <i class="fab fa-instagram"></i>
     </div>
-    <div class="copyright">&#169 2020 ACME EVENTS | SITE BY RADS</div>
+    <div class="copyright">&#169 2020 ACME EVENTS </div>
 
 </div>
     <script src="../scripts/fetch.js"></script>
