--- a/Webpage/pages/Mainpage.html
+++ b/Webpage/pages/Mainpage.html
@@ -19,11 +19,11 @@
 
         <nav>
             <ul>
-                <li><a href="">Item 1</a> </li>
-                <li><a href="">Item 2</a> </li>
-                <li><a href="">Item 4</a> </li>
-                <li><a href="">Item 3</a> </li>
-                <li><a href="">Item 5</a> </li>
+                <li><a href="events.html">Events</a> </li>
+                <li><a href="eventdetails.html">Details</a> </li>
+                <li><a href="about.html">About</a> </li>
+                <li><a href="contact.html">Contact</a> </li>
+                <li><a href="login.html">Login</a> </li>
                 
             </ul>
         </nav>
