--- a/Webpage/pages/about.html
+++ b/Webpage/pages/about.html
@@ -20,7 +20,7 @@
                 <li><a href="events.html">Events</a> </li>
                 <li><a href="eventdetails.html">Details</a> </li>
                 <li><a href="contact.html">Contact</a> </li>
-                
+                <li><a href="login.html">Admin</a> </li>
             </ul>
         </nav>
         
