--- a/Webpage/pages/eventdetails.html
+++ b/Webpage/pages/eventdetails.html
@@ -20,6 +20,7 @@
                 <li><a href="events.html">Events</a> </li>
                 <li><a href="about.html">About</a> </li>
                 <li><a href="contact.html">Contact</a> </li>
+                <li><a href="login.html">Admin</a> </li>
                 
             </ul>
         </nav>
