Minor Bug fixes

--- a/Webpage/pages/contact.html
+++ b/Webpage/pages/contact.html
@@ -22,6 +22,7 @@
               <li><a href="events.html">Events</a> </li>
               <li><a href="eventdetails.html">Details</a> </li>
               <li><a href="about.html">About</a> </li>
+              <li><a href="login.html">Admin</a> </li>
               
           </ul>
       </nav>
