changed file structure and prepared everything for delivery

--- a/pages/about.html
+++ b/pages/about.html
@@ -16,7 +16,7 @@
 
         <nav>
             <ul>
-                <li><a href="Mainpage.html">Home</a> </li>
+                <li><a href="../index.html">Home</a> </li>
                 <li><a href="events.html">Events</a> </li>
                 <li><a href="eventdetails.html">Details</a> </li>
                 <li><a href="contact.html">Contact</a> </li>
@@ -26,16 +26,18 @@
         
         <div class="logo"><img src="../images/loggo.PNG"></div>
     </div>
-
-    <div class="textbox">
-        <h1>Om oss</h1>
-        <h2>Agil utveckling - Scrum</h2>
-        <p>Vi tillämpar scrum, som är ett arbetssätt där vi arbetar i korta sprintar med aktuella arbetsuppgifter. Jämfört med ett traditionellt projekt där man på förhand har bestämt vad som ska göras genom hela projektet, bestämmer vi med scrum vad som ska göras inför varje påbörjad sprint. Då varje sprint endast sträcker sig över 1-2 veckor kan vi mycket snabbt omvärdera och ställa om arbetsuppgifterna för att matcha en föränderlig kravspec. Ni som kund har därmed mycket större möjlighet att påverka riktningen under hela projektets gång jämfört med ett traditionellt projekt.</p>       
+    <div class="textbox-container">
+        <div class="textbox">
+            <img src="../images/scrum.png" alt="scrum">
+            <h1>Om oss</h1>
+            <h2>Agil utveckling - Scrum</h2>
+            <p>Vi tillämpar scrum, som är ett arbetssätt där vi arbetar i korta sprintar med aktuella arbetsuppgifter. Jämfört med ett traditionellt projekt där man på förhand har bestämt vad som ska göras genom hela projektet, bestämmer vi med scrum vad som ska göras inför varje påbörjad sprint. Då varje sprint endast sträcker sig över 1-2 veckor kan vi mycket snabbt omvärdera och ställa om arbetsuppgifterna för att matcha en föränderlig kravspec. Ni som kund har därmed mycket större möjlighet att påverka riktningen under hela projektets gång jämfört med ett traditionellt projekt.</p>       
+        </div>    
     </div>
-
+    
     <div class="footer">
         <a href="contact.html" class="contact">Contact</a>
-        <a href="Mainpage.html" class="home">ACME Events</a>
+        <a href="../index.html" class="home">ACME Events</a>
       </div>
 </body>
 </html>
