--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,23 +17,14 @@
       </label>
 
       <nav>
-<<<<<<< HEAD
           <ul>
-              <li><a href="Mainpage.html">Home</a> </li>
+              <li><a href="../index.html">Home</a> </li>
               <li><a href="events.html">Events</a> </li>
               <li><a href="eventdetails.html">Details</a> </li>
               <li><a href="about.html">About</a> </li>
               <li><a href="login.html">Admin</a> </li>
               
           </ul>
-=======
-        <ul>
-          <li><a href="Mainpage.html">Home</a></li>
-          <li><a href="events.html">Events</a></li>
-          <li><a href="eventdetails.html">Details</a></li>
-          <li><a href="about.html">About</a></li>
-        </ul>
->>>>>>> 14bf7d0336d741418fc0eeaf0b64b64520812072
       </nav>
 
       <div class="logo"><img src="../images/loggo.PNG" /></div>
