--- a/pages/admin.html
+++ b/pages/admin.html
@@ -20,7 +20,7 @@
 
         <nav>
             <ul>
-                <li><a href="Mainpage.html">Home</a> </li>
+                <li><a href="../index.html">Home</a> </li>
                 <li><a href="events.html">Events</a> </li>
                 <li><a href="eventdetails.html">Details</a> </li>
                 <li><a href="about.html">About</a> </li>
