--- a/pages/eventdetails.html
+++ b/pages/eventdetails.html
@@ -18,7 +18,7 @@
 
       <nav>
         <ul>
-          <li><a href="Mainpage.html">Home</a></li>
+          <li><a href="../index.html">Home</a></li>
           <li><a href="events.html">Events</a></li>
           <li><a href="about.html">About</a></li>
           <li><a href="contact.html">Contact</a></li>
