--- a/pages/events.html
+++ b/pages/events.html
@@ -17,7 +17,7 @@
 
         <nav>
             <ul>
-                <li><a href="Mainpage.html">Home</a> </li>
+                <li><a href="../index.html">Home</a> </li>
                 <li><a href="eventdetails.html">Details</a> </li>
                 <li><a href="about.html">About</a> </li>
                 <li><a href="contact.html">Contact</a> </li>
