--- a/pages/login.html
+++ b/pages/login.html
@@ -18,7 +18,7 @@
 
         <nav>
             <ul>
-                <li><a href="Mainpage.html">Home</a> </li>
+                <li><a href="../index.html">Home</a> </li>
                 <li><a href="events.html">Events</a> </li>
                 <li><a href="eventdetails.html">Details</a> </li>
                 <li><a href="about.html">About</a> </li>
@@ -39,6 +39,6 @@
 
     </div>
     
-    <script src="../javascript/login.js"></script>
+    <script src="../scripts/login.js"></script>
 </body>
 </html>
